--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ doctype
 html
 
 head
-  title ViewJS
+  title View Todo
   meta(charset='utf-8')
   meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
   meta(name='viewport', content='width=device-width, initial-scale=1.0')
@@ -12,15 +12,22 @@ head
     script(src='#{url}')
 
 body#app
+  div.container
 
-  h1 Vue Todo
+    h1 Vue Todo
 
-  form(v-on:submit.prevent="createTask")
-    input(v-model="newTask.text" required)
-    button(type="submit") Add
+    form(v-on:submit.prevent="createTask").flex
+      div.flex-auto
+        input(v-model="newTask.text" required)
+      div.flex-none
+        button(type="submit") Add
 
-  ul
-    li(v-for="task in tasks") {{ task.text }}
-      button(type="button" v-on:click="removeTask(task)") Remove
+    ul
+      li(v-for="task in tasks")
+        button(type="button" v-on:click="removeTask(task)")
+          svg(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 486.4 486.4" width="20" height="20")
+            path(d="M446 70H344.8V53.5c0-29.5-24-53.5-53.5-53.5h-96.2c-29.5 0-53.5 24-53.5 53.5V70H40.4c-7.5 0-13.5 6-13.5 13.5S32.9 97 40.4 97h24.4v317.2c0 39.8 32.4 72.2 72.2 72.2h212.4c39.8 0 72.2-32.4 72.2-72.2V97H446c7.5 0 13.5-6 13.5-13.5S453.5 70 446 70zM168.6 53.5c0-14.6 11.9-26.5 26.5-26.5h96.2c14.6 0 26.5 11.9 26.5 26.5V70H168.6V53.5zm226 360.7c0 24.9-20.3 45.2-45.2 45.2H137c-24.9 0-45.2-20.3-45.2-45.2V97h302.9v317.2h-.1z")
+            path(d="M243.2 411c7.5 0 13.5-6 13.5-13.5V158.9c0-7.5-6-13.5-13.5-13.5s-13.5 6-13.5 13.5v238.5c0 7.5 6 13.6 13.5 13.6zM155.1 396.1c7.5 0 13.5-6 13.5-13.5V173.7c0-7.5-6-13.5-13.5-13.5s-13.5 6-13.5 13.5v208.9c0 7.5 6.1 13.5 13.5 13.5zM331.3 396.1c7.5 0 13.5-6 13.5-13.5V173.7c0-7.5-6-13.5-13.5-13.5s-13.5 6-13.5 13.5v208.9c0 7.5 6 13.5 13.5 13.5z")
+        span {{ task.text }}
 
-  p(v-if="!tasks.length") No Tasks.
+    p(v-if="!tasks.length") No Tasks.
